--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <header>
         <nav>
             <h1>Philippe Vives Carceller</h1>
-            <ul>
+            <img class="menu-burger" src="src/img/menu burger.svg">
+            <ul class="active">
                 <li>
                     <a>Accueil</a>
                 </li>
