responsive header completed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <h1>Philippe Vives Carceller</h1>
             <img class="menu-burger" src="src/img/menu burger.svg">
-            <ul class="active">
+            <ul class="nav-ul">
                 <li>
                     <a>Accueil</a>
                 </li>
