completed header with comments

--- a/index.html
+++ b/index.html
@@ -8,36 +8,50 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <header>
+    <!-- Header -->
+    <header class="header">
+        <!-- Navbar -->
         <nav>
+            <!-- Title -->
             <h1>Philippe Vives Carceller</h1>
+            <!-- Menu Burger Icon -->
             <img class="menu-burger" src="src/img/menu burger.svg">
+            <!-- Ul -->
             <ul class="nav-ul">
+                <!-- Accueil -->
                 <li>
                     <a>Accueil</a>
                 </li>
+                <!-- Projets -->
                 <li>
                     <a>Projets</a>
                     <img class="projects-window-icon" src="src/img/chevron-down.svg">
 
+                    <!-- Projets Container -->
                     <div class="projets-window-container">
+                        <!-- Projet n°1 -->
                         <div class="projects-window-text-box">
                             <p>Test</p>
                         </div>
+                        <!-- Projet n°2 -->
                         <div class="projects-window-text-box">
                             <p>Test</p>
                         </div>
+                        <!-- Projet n°3 -->
                         <div class="projects-window-text-box">
                             <p>Test</p>
                         </div>
+                        <!-- Projet n°4 -->
                         <div class="projects-window-text-box">
                             <p>Test</p>
                         </div>
                     </div>
                 </li>
+                <!-- A propos -->
                 <li>
                     <a>À propos</a>
                 </li>
+                <!-- Contact -->
                 <li>
                     <a>Contact</a>
                 </li>
