début de l'accueil

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <section class="accueil">
+            <div class="text-container">
+                <p style="--i:1">ACCUEIL</p>
+                <p style="--i:2">Bonjour, je suis Philippe Vives Carceller.</p>
+                <p style="--i:3">Cela fait presque un an que je me passionne pour le développement web. Je réalise des sites web
+                    en utilisant de l'HTML, CSS, JavaScript, et je maîtrise également Wordpress.
+                    Il m'arrive de temps à autre de concevoir des designs.</p>
+            </div>
+        </section>
+    </main>
     <script src="script.js"></script> 
 </body>
 </html>
