--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
     </header>
 
     <main>
-        <section class="accueil">
+        <section id="accueil">
             <div class="text-container">
                 <p style="--i:1">ACCUEIL</p>
                 <p style="--i:2">Bonjour, je suis Philippe Vives Carceller.</p>
                 <p style="--i:3">Cela fait presque un an que je me passionne pour le développement web. Je réalise des sites web
                     en utilisant de l'HTML, CSS, JavaScript, et je maîtrise également Wordpress.
-                    Il m'arrive de temps à autre de concevoir des designs.</p>
+                    Il m'arrive aussi de temps à autre de concevoir des designs.</p>
             </div>
         </section>
     </main>
