Responsive header without animations | Commented code

--- a/index.html
+++ b/index.html
@@ -9,45 +9,52 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
+    <header class="active">
         <nav>
-            <div class="menu-burger-container">
-                <h1>Philippe Vives Carceller</h1>
-                <img id="menu-burger" src="src/img/menu-burger.svg" onclick="mobile_menu()">
-            </div>
-            <ul class="header-content">
+            <h1>Philippe Vives Carceller</h1> 
+            <img id="menu-burger" src="src/img/menu-burger.svg" onclick="mobile_menu()"> <!-- Menu burger icon -->
+            <ul>
+                <!-- Accueil Button -->
                 <li>
                     <a>Accueil</a>
                 </li>
+                <!-- Projets Button -->
                 <li>
                     <a>Projets</a>
-                    <img class="header-chevron" src="src/img/chevron-down.svg">
-                    <div class="header-projects-container">
+                    <img class="header-chevron" src="src/img/chevron-down.svg"> <!-- Chevron on the right of the text-->
+                    <div class="header-projects-container"> <!-- Projects list window -->
+                        <!-- Morpion -->
                         <a href="#">
                             <img class="header-projects-icon" src="src/img/project-icon/morpion-icon.svg">
                             <p>Morpion</p>
                         </a>
+                        <!-- Old Portfolio -->
                         <a href="#">
                             <img class="header-projects-icon" src="src/img/project-icon/portfolio-icon.svg">
                             <p>Ancien Portfolio</p>
                         </a>
+                        <!-- Photo Galery -->
                         <a href="#">
                             <img class="header-projects-icon" src="src/img/project-icon/gallery-icon.svg">
                             <p>Galerie Photo</p>
                         </a>
+                        <!-- Calculator -->
                         <a href="#">
                             <img class="header-projects-icon" src="src/img/project-icon/calc-icon.svg">
                             <p>Calculatrice</p>
                         </a>
+                        <!-- BurgerSup -->
                         <a href="#">
                             <img class="header-projects-icon" src="src/img/project-icon/burgersup-icon.svg">
                             <p>BurgerSup</p>
                         </a>
                     </div>
                 </li>
+                <!-- A propos Button -->
                 <li>
                     <a>À propos</a>
                 </li>
+                <!-- Contact Button -->
                 <li>
                     <a>Contact</a>
                 </li>
