--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="active">
         <nav>
             <h1>Philippe Vives Carceller</h1> 
-            <img id="menu-burger" src="src/img/menu-burger.svg" onclick="mobile_menu()"> <!-- Menu burger icon -->
+            <img id="menu-burger" src="src/img/menu-burger.svg" onclick="ShowHeader()"> <!-- Menu burger icon -->
             <ul>
                 <!-- Accueil Button -->
                 <li>
