Fixes the issue of the burger menu being already open when arriving on the site.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="active">
+    <header>
         <nav>
             <h1>Philippe Vives Carceller</h1> 
             <img id="menu-burger" src="src/img/menu-burger.svg" onclick="ShowHeader()"> <!-- Menu burger icon -->
