--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:site_name" content="Philippe Vives Carceller">
+    <meta name="author" content="Philippe Vives Carceller">
+    <meta name="description" content="Bonjour, je suis Philippe Vives Carceller et voici mon Portfolio. Vous pourrez y retrouver des informations me concernant ainsi que les projets que j'ai réalisés récemment.">
     <link href="style.css" rel="stylesheet">
     <title>Portfolio</title>
 </head>
@@ -63,7 +66,47 @@
     </header>
     <!-- Main Content -->
     <main>
+        <!-- Accueil -->
+        <section id="home">
+            <div class="top-part">
+                <div class="background">
+                    <div id="wordpress">
+                        <img src="src/img/language-icon/wordpress.svg">
+                    </div>
+                    <div id="html">
+                        <img src="src/img/language-icon/html.svg">
+                    </div>
+                    <div id="css">
+                        <img src="src/img/language-icon/css.svg">
+                    </div>
+                    <div id="javascript">
+                        <img src="src/img/language-icon/javascript.svg">
+                    </div>
+                </div>
+                <div class="picture"></div>
+            </div>
+            <div class="text">
+                <h1>ACCUEIL</h1>
+                <h1>Bonjour, je suis Philippe Vives Carceller.</h1>
+                <p>Depuis un an, je me passione pour le développement web.
+                   Je réalise des sites web en utilisant de l'HTML, CSS, Javascript
+                   et il m'arrive aussi de concevoir des designs. J'utilise
+                   également Wordpress.
+                </p>
+            </div>
+        </section>
+        <!-- Projets -->
+        <section id="project">
 
+        </section>
+        <!-- A propos -->
+        <section id="about">
+
+        </section>
+        <!-- Contact -->
+        <section id="contact">
+
+        </section>
     </main>
     <!-- Footer -->
     <footer>
