projects section no responsive

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <ul>
                 <!-- Accueil Button -->
                 <li>
-                    <a>Accueil</a>
+                    <a href="#home">Accueil</a>
                 </li>
                 <!-- Projets Button -->
                 <li>
-                    <a>Projets</a>
+                    <a href="#home">Projets</a>
                     <img class="header-chevron" src="src/img/chevron-down.svg"> <!-- Chevron on the right of the text-->
                     <div class="header-projects-container"> <!-- Projects list window -->
                         <!-- Morpion -->
@@ -56,11 +56,11 @@
                 </li>
                 <!-- A propos Button -->
                 <li>
-                    <a>À propos</a>
+                    <a href="#home">À propos</a>
                 </li>
                 <!-- Contact Button -->
                 <li>
-                    <a>Contact</a>
+                    <a href="#home">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -90,7 +90,84 @@
         </section>
         <!-- Projets -->
         <section id="project">
-
+            <div class="light n1"></div>
+            <div class="light n2"></div>
+            <div class="text">
+                <h1 class="project-title">PROJETS</h1>
+                <p class="project-description">Vous pouvez retrouver la liste de mes projets réalisés
+                   récemment (de janvier 2023 à aujourd’hui). L’icone Travaux
+                   indique ceux en cours de développement. N’hésitez pas à me
+                   contacter pour plus d’informations
+                </p>
+            </div>
+            <!-- Projects cards container -->
+            <div id="cards">
+                <!-- Project n°1 -->
+                <div class="card Morpion">
+                    <div class="card-content">
+                        <div class="card-background"></div>
+                        <div class="card-info-container">
+                            <div class="card-icon">
+                                <img src="src/img/project-icon/morpion-icon.svg">
+                            </div>
+                            <h1 class="card-title">Morpion</h1>
+                            <p class="card-description">Jeu de morpion réalisé en Html, Css et Javascript.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project n°2 -->
+                <div class="card Portfolio">
+                    <div class="card-content">
+                        <div class="card-background"></div>
+                        <div class="card-info-container">
+                            <div class="card-icon">
+                                <img src="src/img/project-icon/portfolio-icon.svg">
+                            </div>
+                            <h1 class="card-title">Ancien Portfolio</h1>
+                            <p class="card-description">Ancien Portfolio réalisé en Html, Css et Javascript.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project n°3 -->
+                <div class="card Gallery">
+                    <div class="card-content">
+                        <div class="card-background"></div>
+                        <div class="card-info-container">
+                            <div class="card-icon">
+                                <img src="src/img/project-icon/gallery-icon.svg">
+                            </div>
+                            <h1 class="card-title">Galerie Photo</h1>
+                            <p class="card-description">Galerie Photo regroupant mes peintures réalisée sur Wordpress.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project n°4 -->
+                <div class="card Calculator">
+                    <div class="card-content">
+                        <div class="card-background"></div>
+                        <div class="card-info-container">
+                            <div class="card-icon">
+                                <img src="src/img/project-icon/calc-icon.svg">
+                            </div>
+                            <h1 class="card-title">Calculatrice</h1>
+                            <p class="card-description">Calculatrice réalisée en Html, Css et Javascript.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project n°5 -->
+                <div class="card BurgerSup">
+                    <div class="card-content">
+                        <div class="card-background"></div>
+                        <div class="card-info-container">
+                            <div class="card-icon">
+                                <img src="src/img/project-icon/burgersup-icon.svg">
+                            </div>
+                            <h1 class="card-title">BurgerSup</h1>
+                            <p class="card-description">Compteur d'heures supplémentaires réalisé en Html, Css et Javascript.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- A propos -->
         <section id="about">
