--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </li>
                 <!-- Projets Button -->
                 <li>
-                    <a href="#home">Projets</a>
+                    <a href="#project">Projets</a>
                     <img class="header-chevron" src="src/img/chevron-down.svg"> <!-- Chevron on the right of the text-->
                     <div class="header-projects-container"> <!-- Projects list window -->
                         <!-- Morpion -->
@@ -56,11 +56,11 @@
                 </li>
                 <!-- A propos Button -->
                 <li>
-                    <a href="#home">À propos</a>
+                    <a href="#about">À propos</a>
                 </li>
                 <!-- Contact Button -->
                 <li>
-                    <a href="#home">Contact</a>
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
         </nav>
