bug fix & new logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta property="og:site_name" content="Philippe Vives Carceller">
     <meta name="author" content="Philippe Vives Carceller">
     <meta name="description" content="Bonjour, je suis Philippe Vives Carceller et voici mon Portfolio. Vous pourrez y retrouver des informations me concernant ainsi que les projets que j'ai réalisés récemment.">
+    <link rel="icon" href="src/img/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="src/img/shortcut.png" type="image/x-icon">
     <link href="style.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Portfolio</title>
@@ -15,6 +17,7 @@
     <!-- Header -->
     <header>
         <nav>
+            <img class="logo" src="src/img/shortcut.png" draggable="false">
             <h1>Philippe Vives Carceller</h1> 
             <img id="menu-burger" src="src/img/menu-burger.svg" onclick="ShowHeader()"> <!-- Menu burger icon -->
             <ul>
