about page without responsive

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:site_name" content="Philippe Vives Carceller">
     <meta name="author" content="Philippe Vives Carceller">
-    <meta name="description" content="Bonjour, je suis Philippe Vives Carceller et voici mon Portfolio. Vous pourrez y retrouver des informations me concernant ainsi que les projets que j'ai réalisés récemment.">
+    <meta name="description" content="Bonjour, je suis Philippe Vives Carceller et voici mon portfolio. Vous y trouverez des informations me concernant ainsi que les projets que j'ai récemment réalisés.">
     <link rel="icon" href="src/img/logo.png" type="image/x-icon">
     <link rel="shortcut icon" href="src/img/shortcut.png" type="image/x-icon">
     <link href="style.css" rel="stylesheet">
@@ -174,7 +174,46 @@
         </section>
         <!-- A propos -->
         <section id="about">
-
+            <div class="about-info-container">
+                <div class="about-text">
+                    <h1 class="about-title">À PROPOS</h1>
+                    <p class="about-description">
+                    Né le 19 janvier 2004, j'ai aujourd'hui 19 ans. En 2022 j'ai obtenu
+                    un baccalauréat STI2D option SIN (Système d'Information du Numérique).
+                    Suite à l'obtention de mon diplôme, et encore indécis quant à mon futur
+                    professionnel, je me suis donc laissé du temps pour prendre du recul et
+                    réfléchir à ce que je voulais vraiment faire par la suite. J'ai profité
+                    également de ce temps pour expérimenter différents emplois (restauration,
+                    animation) et pour passer mon permis de conduire B2. Je me suis également
+                    découvert une passion pour le développement web. J'ai ainsi trouvé ma voie:
+                    m'orienter vers une formation de développeur web.
+                    </p>
+            </div>
+            <img src="src/img/picture2.png" alt="Photo de profil" class="about-picture">
+            </div>              
+            <div class="about-social-container">
+                <a class="social-card github">
+                    <div>
+                        <img src="github.svg">
+                        <h1>GitHub</h1>
+                    </div>
+                    <p>Pour accéder aux codes de mes projets</p>
+                </a>
+                <a class="social-card instagram">
+                    <div>
+                        <img src="instagram.svg">
+                        <h1>Instagram</h1>
+                    </div>
+                    <p>Pour visualiser mes peintures</p>
+                </a>
+                <a class="social-card github">
+                    <div>
+                        <img src="linkedin.svg">
+                        <h1>Linkedin</h1>
+                    </div>
+                    <p>Pour en savoir plus sur mes expériences professionnelles</p>
+                </a>
+            </div>
         </section>
         <!-- Contact -->
         <section id="contact">
