about page almost fully responsive

--- a/index.html
+++ b/index.html
@@ -189,8 +189,7 @@
                     m'orienter vers une formation de développeur web.
                     </p>
             </div>
-            <img src="src/img/picture2.png" alt="Photo de profil" class="about-picture">
-            </div>              
+            <div alt="Photo de profil" class="about-picture"></div>
             <div class="about-social-container">
                 <a class="social-card github">
                     <div>
@@ -214,6 +213,7 @@
                     <p>Pour en savoir plus sur mes expériences professionnelles</p>
                 </a>
             </div>
+            </div>              
         </section>
         <!-- Contact -->
         <section id="contact">
