page finished responsive almost done

--- a/index.html
+++ b/index.html
@@ -252,7 +252,34 @@
     </main>
     <!-- Footer -->
     <footer>
-
+        <div class="container">
+            <section class="info">
+                <h1>Philippe Vives Carceller</h1>
+                <p>philippe.vivesc@gmail.com</p>
+                <p>07 67 43 66 83</p>
+            </section>
+            <section class="page">
+                <h1>Page</h1>
+                <a href="#home">Accueil</a>
+                <a href="#home">Projets</a>
+                <a href="#home">À propos</a>
+                <a href="#home">Contact</a>
+            </section>
+            <section class="social">
+                <h1>Réseaux</h1>
+                <a href="https://www.example.com" target="_blank">GitHub</a>
+                <a href="https://www.example.com" target="_blank">Instagram</a>
+                <a href="https://www.example.com" target="_blank">Linkedin</a>
+            </section>
+            <section class="projects">
+                <h1>Projets</h1>
+                <a href="https://www.example.com" target="_blank">Morpion</a>
+                <a href="https://www.example.com" target="_blank">Ancien Porfolio</a>
+                <a href="https://www.example.com" target="_blank">Galerie Photo</a>
+                <a href="https://www.example.com" target="_blank">Calculatrice</a>
+                <a href="https://www.example.com" target="_blank">BurgerSup</a>
+            </section>
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
