--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
           }
         }
     </script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init('NCfbALJTp8EgwsGn1');
+        })();
+    </script>
 </head>
 <body>
     <!-- Header -->
@@ -287,6 +293,7 @@
                     <textarea id="message" name="message" rows="5" placeholder="Message"></textarea>
             
                     <input type="submit" class="contact-form-submit" value="Envoyer">
+                    <div class="submit-loading"></div>
                 </form>
             </div>
         </section>
