--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="googlebot" content="index, follow">
     <meta name="google" content="notranslate">
 
-    <link rel="icon" href="src/img/logo.png" type="image/x-icon">
+    <link rel="icon" href="src/img/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="src/img/shortcut.png" type="image/x-icon">
     <link rel="canonical" href="https://www.philippevivesc.com/"/>
 
